--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: objective-c
 
 before_install:
-    - gem install cocoapods
+    - gem install cocoapods -v '0.39.0'
 
 script: xctool -workspace Example/GQModularize.xcworkspace -scheme GQModularize-Example -sdk iphonesimulator test
