--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: objective-c
+rvm: 1.9.3
 
 before_install:
-    - gem install cocoapods -v '0.39.0'
+    - gem install cocoapods
 
 script: xctool -workspace Example/GQModularize.xcworkspace -scheme GQModularize-Example -sdk iphonesimulator test
