--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: objective-c
 rvm: 1.9.3
 
 before_install:
+    - gem install activesupport -v "4.2.6"
     - gem install cocoapods
 
 script: xctool -workspace Example/GQModularize.xcworkspace -scheme GQModularize-Example -sdk iphonesimulator test
