--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: objective-c
 
+osx_image: xcode7.3
+
 before_install:
     - gem install activesupport -v "4.2.6"
     - gem install cocoapods -v "0.39.0"
