--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ osx_image: xcode7.3
 before_install:
     - gem install activesupport -v "4.2.6"
     - gem install cocoapods -v "0.39.0"
+    - gem install xcpretty
 
 script: 
     - pod install --project-directory=Example
-    - xctool -workspace Example/GQModularize.xcworkspace -scheme GQModularize-Example -sdk iphonesimulator test
+    - xcodebuild -workspace Example/GQModularize.xcworkspace -scheme GQModularize-Example -sdk iphonesimulator test | xcpretty && exit ${PIPESTATUS[0]}
